# healslut

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.rtf  README.md  build.rs
build_scripts/: windows_build.bat  windows_install.bash
src/: capture.rs  config.rs  exit.rs  gui.rs  main.rs  plug.rs
wix/: main.wxs
